--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,25 +9,11 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Reinforcement Learning.md",
-            "mode": "source",
-            "backlinks": false
-          }
-        },
-        "group": "b577e432c4c1ac4f"
-      },
-      {
-        "id": "8bce506bf8883055",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Reinforcement Learning.md",
+            "file": "Models/Linear Models.md",
             "mode": "preview",
             "backlinks": false
           }
-        },
-        "group": "b577e432c4c1ac4f"
+        }
       }
     ],
     "direction": "vertical"
@@ -83,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Reinforcement Learning.md",
+                "file": "Models/Linear Models.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -103,15 +89,15 @@
   },
   "active": "4ce8acf3a3442c33",
   "lastOpenFiles": [
-    "Reinforcement Learning.md",
+    "Models/Linear Models.md",
+    "Models/Neural Networks.md",
+    "Models/Decision Trees.md",
+    "Algorithms/K-Nearest Neighbour.md",
+    "Algorithms/Perceptron.md",
     "Unsupervised Learning.md",
     "Supervised Learning.md",
-    "Machine Learning Basics.md",
-    "Models/Decision Trees.md",
-    "Introduction.md",
-    "Models/Neural Networks.md",
-    "Algorithms/Perceptron.md",
-    "Models/Linear Models.md",
-    "Instructors.md"
+    "Reinforcement Learning.md",
+    "README.md",
+    "Optional Knowledge.md"
   ]
 }
